# platform-tui

./: .env.devnet  .env.example  .env.local  .env.mainnet  .env.testnet  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  explorer.state  generate_devnet_env.sh  generate_local_env.sh  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
explorer.drive/: 000014.sst  000015.sst  IDENTITY  LOG  LOG.old.1702408211537525  LOG.old.1702409252284697  LOG.old.1702409917156709  LOG.old.1702440725654939  LOG.old.1702440985762871  LOG.old.1702441202267347  LOG.old.1702445630559836  LOG.old.1702445777007576  LOG.old.1702446066561350  LOG.old.1702452068545023  LOG.old.1702452291557183  LOG.old.1702455979244381  LOG.old.1702456379466449  LOG.old.1702456502133547  LOG.old.1702456615013234  LOG.old.1702456750342574  LOG.old.1702543734542431  LOG.old.1702546090656789  LOG.old.1702546954156476  LOG.old.1702549301479062  LOG.old.1702549368740879  LOG.old.1702549461299045  LOG.old.1702549878854324  LOG.old.1702559990377911  LOG.old.1702562528331028  LOG.old.1702562627140801  LOG.old.1702562806308730  LOG.old.1702562913536663  LOG.old.1702563587044001  LOG.old.1702565315573602  LOG.old.1702898166989847  LOG.old.1702899230907587  LOG.old.1702899555875050  LOG.old.1702899728880392  LOG.old.1702899797599817  LOG.old.1702899921895722  (+296 more)
src/: app.rs  backend.rs  components.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  mock_components.rs  screen.rs  terminal_event.rs  tui.rs  ui.rs
src/app/: contract.rs  error.rs  identity.rs  state.rs  strategies.rs  version_upgrade.rs  wallet.rs
src/backend/: contracts.rs  documents.rs  error.rs  identities.rs  info_display.rs  insight.rs  platform_info.rs  screen_state.rs  sdk_impl.rs  state.rs  strategies.rs  wallet.rs
src/backend/documents/: broadcast_random_documents.rs
src/components/: breadcrumbs.rs  input.rs  screen.rs  status.rs
src/components/screen/: add_wallet.rs  choose_document_type.rs  contract.rs  document_type.rs  get_contract.rs  get_identity.rs  get_system_contract.rs  get_user_contract.rs  identity.rs  main.rs  shared.rs  strategies.rs  strategy_confirm.rs  strategy_contracts.rs  strategy_create.rs  strategy_identity_inserts.rs  strategy_load.rs  strategy_operations.rs  strategy_select.rs  strategy_start_identities.rs  version_upgrade.rs  wallet.rs
src/managers/: insight.rs  mod.rs
src/mock_components/: command_pallet.rs  completing_input.rs
src/mock_components/completing_input/: completions.rs
src/screen/: identity_screen.rs  main_screen.rs
src/ui/: form.rs  screen.rs  status_bar.rs  views.rs
src/ui/form/: completing_input.rs  select.rs  text_input.rs  utils.rs  widgets.rs
src/ui/form/widgets/: select.rs  text.rs
src/ui/form/widgets/text/: parsers.rs
src/ui/screen/: command_pallet.rs  info.rs  info_display.rs  utils.rs  widgets.rs
src/ui/screen/widgets/: command_pallet.rs  info.rs
src/ui/views/: contracts.rs  documents.rs  identities.rs  identities_view.rs  identity_keys.rs  main.rs  main_view.rs  platform_info.rs  strategies.rs  usernames.rs  wallet.rs  withdrawals.rs
src/ui/views/contracts/: document_type.rs  fetch_contract.rs  fetch_system_contract.rs
src/ui/views/contracts/document_type/: broadcast_document.rs  broadcast_random_documents.rs  contested_documents.rs  contested_resources.rs
src/ui/views/strategies/: clone_strategy.rs  contracts_with_updates.rs  contracts_with_updates_screen.rs  delete_strategy.rs  export_strategy.rs  identity_inserts.rs  identity_inserts_screen.rs  import_strategy.rs  new_strategy.rs  operations.rs  operations_screen.rs  run_strategy.rs  run_strategy_screen.rs  select_strategy.rs  selected_strategy.rs  start_contracts.rs  start_contracts_screen.rs  start_identities.rs  start_identities_screen.rs
src/ui/views/strategies/operations/: contract_create.rs  contract_update_doc_types.rs  contract_update_new_fields.rs  document.rs  identity_top_up.rs  identity_transfer.rs  identity_update.rs  identity_withdrawal.rs
src/ui/views/wallet/: add_identity_key.rs
supporting_files/contract/: crypto-card-game.json  dashpay-contract-all-mutable-update-1.json  dashpay-contract-all-mutable-update-2.json  dashpay-contract-all-mutable.json  dashpay-variant-1.json  dashpay-variant-2.json  dashpay-variant-3.json  dashpay-variant-4.json  dashpay-variant-5.json  dpns-contract-documents.json  dpns_contract_preorder.json
tests/: core_rpc_overload.rs
