[package]
name = "rs-platform-explorer"
version = "0.1.0"
license = "MIT"
edition = "2021"
default-run = "rs-platform-explorer"

[dependencies]
strum = { version = "0.26.1", features = ["derive"] }
tui-realm-stdlib = "1.3.1"
tuirealm = "1.9.1"
bs58 = "0.5.0"
dpp = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1", features = [
    "client",
] }
dash-sdk = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
drive = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
drive-proof-verifier = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
thiserror = "1"
serde = "1.0.197"
serde_json = "1.0.120"
toml = { version = "0.8.10", features = ["display"] }
dapi-grpc = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1", features = [
    "client",
] }
rs-dapi-client = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
tokio = { version = "1.36.0", features = ["full"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
strategy-tests = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
simple-signer = { git = "https://github.com/dashpay/platform", tag = "v1.0.0-rc.1" }
reqwest = { version = "0.12.3", features = ["json"] }
hex = { version = "0.4.3" }
itertools = "0.12.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
walkdir = "2"
rand = "0.8"
cli-clipboard = "0.4.0"
memoize = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
envy = "0.4.2"
clap = { version = "4.5.1", features = ["derive"] }
governor = "0.6.3"
tokio-util = "0.7.10"
chrono = "0.4"
chrono-humanize = "0.2.3"
dashmap = "5.5.3"
grovedb-version = "1.0.0-rc.2"
sha2 = "0.10.8"
