[package]
name = "rs-platform-explorer"
version = "0.1.0"
license = "MIT"
edition = "2021"
default-run = "rs-platform-explorer"
rust-version = "1.80"

[dependencies]
strum = { version = "0.26.1", features = ["derive"] }
tui-realm-stdlib = "1.3.1"
tuirealm = "1.9.1"
bs58 = "0.5.0"
copypasta = "0.10.1"
dpp = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52", features = [
    "client",
] }
dash-sdk = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
drive = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
drive-proof-verifier = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
thiserror = "1"
serde = "1.0.197"
serde_json = "1.0.120"
toml = { version = "0.8.10", features = ["display"] }
dapi-grpc = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52", features = [
    "client",
] }
rs-dapi-client = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
tokio = { version = "1.36.0", features = ["full"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
strategy-tests = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
simple-signer = { git = "https://github.com/dashpay/platform", commit = "55da39f601e3a8ae2232ea7ed0ab10a003898c52" }
reqwest = { version = "0.12.3", features = ["json"] }
hex = { version = "0.4.3" }
itertools = "0.12.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
walkdir = "2"
rand = "0.8"
memoize = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
envy = "0.4.2"
clap = { version = "4.5.1", features = ["derive"] }
governor = "0.6.3"
tokio-util = "0.7.10"
chrono = "0.4"
chrono-humanize = "0.2.3"
dashmap = "5.5.3"
grovedb-version = { git = "https://github.com/dashpay/grovedb", rev = "713ad96a0ca443f72fa15738e82df529be1becbb"}
sha2 = "0.10.8"
arboard = { version = "3.4.0", default-features = false, features = ["windows-sys"] }
hdrhistogram = "7.5.4"
